# mpc-learning

./: LICENSE  README.md  README_zh.md
docs/: 01_discrete_model.md  02学习quadruped_pympc库  03 MPC to isaaclab  04 ocs2和库学习
projects/ nmpc_velocity_controller/: centroidal_model_nominal_fixed.py  demo_mpc_no_noise_patched_v3.0_2.py  demo_mpc_no_noise_patched_v3.py  demo_mpc_no_noise_patched_v3_latency.py  nmpc_ipopt_centroidal_fixed.py  objective_function.py
projects/go2_control_lab/: README.md  __init__.py  debug_angles.py  pyproject.toml
projects/go2_control_lab/controllers/: __init__.py  diff_ik.py  mpc.py
projects/go2_control_lab/envs/: __init__.py  stand_env.py
projects/go2_control_lab/robots/: __init__.py  go2.py
projects/go2_control_lab/scripts/: debug_fk_ik.py  stand_go2.isaac.py  stand_go2_diffik.py  stand_go2_nmpc.isaac copy.py  stand_go2_nmpc.isaac.py
projects/go2_control_lab/utils/: __init__.py  filters.py  frames.py
